--- a/charts.yaml
+++ b/charts.yaml
@@ -37,12 +37,12 @@ cards:
     all_series_config:
       yaxis_id: left
       type: column
-      group_by:
-        func: max
-        duration: 1d
       extend_to: false
       float_precision: 1
       stroke_width: 1
+      group_by:
+        func: max
+        duration: 1d
       show:
         legend_value: false
         datalabels: true
@@ -94,7 +94,7 @@ cards:
       yaxis_id: left
       type: column
       group_by:
-        func: sum
+        func: max
         duration: 1d
       extend_to: false
       float_precision: 2
@@ -104,10 +104,10 @@ cards:
         datalabels: true
     stacked: true
     series:
-      - entity: input_number.amber_import_cost_30_minutes
+      - entity: sensor.amber_import_cost_daily
         name: General Usage
         color: '#1086FF'
-      - entity: input_number.amber_export_profit_30_minutes
+      - entity: sensor.amber_export_profit_daily
         name: Solar Exports
         invert: true
         color: '#FFC624'
@@ -253,7 +253,7 @@ cards:
     all_series_config:
       group_by:
         fill: zero
-        func: sum
+        func: max
         duration: 1d
       extend_to: false
       show:
@@ -267,9 +267,7 @@ cards:
         color: firebrick
         float_precision: 1
         stroke_width: 1
-        group_by:
-          func: max
-      - entity: input_number.amber_import_cost_30_minutes
+      - entity: sensor.amber_import_cost_daily
         name: Bought
         type: line
         yaxis_id: right
@@ -279,7 +277,7 @@ cards:
         stroke_width: 2
         show:
           datalabels: true
-      - entity: input_number.amber_export_profit_30_minutes
+      - entity: sensor.amber_export_profit_daily
         name: Sold
         type: line
         yaxis_id: right
@@ -296,8 +294,6 @@ cards:
         color: forestgreen
         float_precision: 1
         stroke_width: 1
-        group_by:
-          func: max
   - type: custom:apexcharts-card
     update_delay: 3s
     update_interval: 1min
